--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -226,35 +226,36 @@
 <h2 class="text-2xl font-bold mb-4 dark:text-white" data-i18n="how-calculated">지표별 계산 방식 (CNN Fear &amp; Greed)</h2>
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">1. 주가 모멘텀 (Stock Price Momentum)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">S&amp;P 500 지수와 125일 이동평균선을 비교합니다.</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-1-title">1. 주가 모멘텀 (Stock Price Momentum)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-1-desc">S&amp;P 500 지수와 125일 이동평균선을 비교합니다.</p>
     </div>
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">2. 주가 강도 (Stock Price Strength)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">52주 신고가와 신저가 종목 수를 비교합니다.</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-2-title">2. 주가 강도 (Stock Price Strength)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-2-desc">52주 신고가와 신저가 종목 수를 비교합니다.</p>
     </div>
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">3. 주가 폭 (Stock Price Breadth)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">상승 종목과 하락 종목의 거래량을 분석합니다. (McClellan Summation Index)</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-3-title">3. 주가 폭 (Stock Price Breadth)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-3-desc">상승 종목과 하락 종목의 거래량을 분석합니다. (McClellan Summation Index)</p>
     </div>
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">4. 풋/콜 옵션 (Put and Call Options)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">풋 옵션과 콜 옵션의 거래량 비율을 측정합니다.</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-4-title">4. 풋/콜 옵션 (Put and Call Options)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-4-desc">풋 옵션과 콜 옵션의 거래량 비율을 측정합니다.</p>
     </div>
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">5. 시장 변동성 (Market Volatility)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">VIX 지수와 50일 이동평균선을 비교합니다.</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-5-title">5. 시장 변동성 (Market Volatility)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-5-desc">VIX 지수와 50일 이동평균선을 비교합니다.</p>
     </div>
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">6. 안전 자산 수요 (Safe Haven Demand)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">주식 수익률과 국채 수익률의 차이를 분석합니다.</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-6-title">6. 안전 자산 수요 (Safe Haven Demand)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-6-desc">주식 수익률과 국채 수익률의 차이를 분석합니다.</p>
     </div>
     <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
-        <h3 class="text-lg font-bold mb-2">7. 정크 본드 수요 (Junk Bond Demand)</h3>
-        <p class="text-sm text-[#49699c] dark:text-slate-400">투자 등급 채권과 투기 등급 채권의 수익률 스프레드를 분석합니다.</p>
+        <h3 class="text-lg font-bold mb-2" data-i18n="us-exp-7-title">7. 정크 본드 수요 (Junk Bond Demand)</h3>
+        <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="us-exp-7-desc">투자 등급 채권과 투기 등급 채권의 수익률 스프레드를 분석합니다.</p>
     </div>
 </div>
 </div>
+
 
 <!-- Footer -->
 <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
