--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -394,7 +394,9 @@
                     quoteEl.textContent = quoteText;
                     
                     if (data.last_update) {
-                        lastUpdatedEl.textContent = `${i18n.translate("last-updated")}: ${data.last_update}`;
+                        const currentLang = i18n.getLanguage();
+                        const timeSuffix = i18n.translate("time-suffix");
+                        lastUpdatedEl.textContent = `${i18n.translate("last-updated")}: ${data.last_update} ${timeSuffix}`;
                     }
                 } else {
                     quoteEl.textContent = i18n.translate("preparing-data");
@@ -405,18 +407,121 @@
             }
         }
 
-        const proverbs = [
-            "\u201c시장은 단기적으로 투표기계지만 장기적으로 저울이다.\u201d\n\u2192 벤저민 그레이엄",
-            "\u201c잃지 않는 것이 버는 것보다 중요하다.\u201d\n\u2192 워런 버핏",
-            "\u201c공포 속에서 사고 탐욕 속에서 팔아라.\u201d\n\u2192 월가 격언",
-            "\u201c이번엔 다르다는 말이 가장 위험하다.\u201d\n\u2192 존 템플턴",
-            "\u201c기다리는 것도 포지션이다.\u201d\n\u2192 월가 격언"
-        ];
+        const proverbs = {
+            ko: [
+                "“시장은 단기적으로 투표기계지만 장기적으로 저울이다.”\n→ 벤저민 그레이엄 (Benjamin Graham)",
+                "“잃지 않는 것이 버는 것보다 중요하다.”\n→ 워런 버핏 (Warren Buffett)",
+                "“첫 번째 규칙은 돈을 잃지 않는 것이다. 두 번째 규칙은 첫 번째 규칙을 잊지 않는 것이다.”\n→ 워런 버핏",
+                "“훌륭한 기업을 적당한 가격에 사라.”\n→ 워런 버핏 / 찰리 멍거",
+                "“위험은 자신이 무엇을 하고 있는지 모를 때 생긴다.”\n→ 워런 버핏",
+                "“공포 속에서 사고 탐욕 속에서 팔아라.”\n→ 워런 버핏 / 월가 격언",
+                "“시장은 인내심 없는 사람의 돈을 인내심 있는 사람에게서 옮겨준다.”\n→ 워런 버핏",
+                "“가격은 지불하는 것이고 가치는 얻는 것이다.”\n→ 워런 버핏",
+                "“이해하지 못하는 사업에는 투자하지 마라.”\n→ 워런 버핏",
+                "“10년 이상 보유할 생각이 없다면 10분도 보유하지 마라.”\n→ 워런 버핏",
+                "“추세는 당신의 친구다.”\n→ 제시 리버모어 (Jesse Livermore)",
+                "“손실은 짧게, 이익은 길게 가져가라.”\n→ 제시 리버모어",
+                "“시장은 항상 옳다.”\n→ 제시 리버모어 (의미상 격언)",
+                "“강세장은 비관 속에서 태어나 회의 속에서 자라고 낙관 속에서 성숙하며 도취 속에서 죽는다.”\n→ 존 템플턴 (John Templeton)",
+                "“이번엔 다르다는 말이 가장 위험하다.”\n→ 존 템플턴",
+                "“기다리는 것도 포지션이다.”\n→ 월가 격언",
+                "“현금도 투자다.”\n→ 월가 격언",
+                "“절대 바닥에서 못 사고 꼭대기에서 못 판다.”\n→ 월가 격언",
+                "“칼 떨어질 때 잡지 마라.”\n→ 월가 격언",
+                "“소문에 사고 뉴스에 팔아라.”\n→ 월가 격언",
+                "“모두가 같은 방향을 볼 때 위험은 커진다.”\n→ 월가 격언",
+                "“시장은 당신의 감정을 시험한다.”\n→ 월가 격언",
+                "“확신이 클수록 조심하라.”\n→ 월가 격언",
+                "“거래가 잦을수록 수익률은 낮아진다.”\n→ 브래드 바버 & 테런스 오딘 (행동재무학 연구)",
+                "“시장에 머무는 시간이 시장을 맞추는 것보다 중요하다.”\n→ 투자 격언 (Bogle 계열 인용)",
+                "“복리는 세계 8대 불가사의다.”\n→ 알버트 아인슈타인 (투자 격언으로 인용)",
+                "“시간은 좋은 기업의 편이다.”\n→ 워런 버핏",
+                "“숫자를 보지 않고 주식을 사는 것은 계기판 없는 비행기를 타는 것과 같다.”\n→ 피터 린치 (Peter Lynch)",
+                "“스토리가 아니라 실적을 사라.”\n→ 피터 린치 (의미 요약)",
+                "“가장 위험한 시점은 모두가 안심할 때다.”\n→ 하워드 막스 (Howard Marks)",
+                "“리스크는 변동성이 아니라 영구적 자본 손실이다.”\n→ 하워드 막스",
+                "“좋은 투자란 나쁜 시나리오에서도 버티는 것이다.”\n→ 하워드 막스",
+                "“높은 수익은 높은 불편함에서 나온다.”\n→ 하워드 막스",
+                "“시장은 과잉 반응한다.”\n→ 로버트 실러 (Robert Shiller)",
+                "“분산투자는 무지를 인정하는 행위다.”\n→ 워런 버핏",
+                "“가장 좋은 매수 시점은 모두가 팔고 싶을 때다.”\n→ 월가 격언",
+                "“싸게 사는 것이 수익의 절반이다.”\n→ 벤저민 그레이엄",
+                "“시장은 언제나 과도하게 낙관적이거나 비관적이다.”\n→ 벤저민 그레이엄",
+                "“손절은 선택이 아니라 생존이다.”\n→ 트레이더 격언",
+                "“포트폴리오는 수익이 아니라 리스크로 관리하라.”\n→ 레이 달리오 (Ray Dalio)",
+                "“미래를 예측하지 말고 대비하라.”\n→ 레이 달리오",
+                "“좋은 투자자는 예측보다 원칙에 의존한다.”\n→ 레이 달리오",
+                "“시장은 합리적이지 않을 수 있다, 하지만 오래 비합리적이진 않다.”\n→ 존 메이너드 케인즈 (John M. Keynes)",
+                "“시장은 당신이 파산하기 전에 비이성적으로 남아 있을 수 있다.”\n→ 존 메이너드 케인즈",
+                "“레버리지는 실수를 치명적으로 만든다.”\n→ 월가 격언",
+                "“수익은 인내에서 나오고 손실은 조급함에서 나온다.”\n→ 월가 격언",
+                "“완벽한 타이밍은 없다.”\n→ 투자 격언",
+                "“하락장은 나쁜 기업을 드러낸다.”\n→ 월가 격언",
+                "“좋은 기업은 위기에서 더 강해진다.”\n→ 워런 버핏 (의미 인용)",
+                "“투자에서 가장 중요한 단어는 ‘영원히’가 아니라 ‘충분히 오래’다.”\n→ 하워드 막스 (의미 인용)"
+            ],
+            en: [
+                "“In the short run, the market is a voting machine but in the long run, it is a weighing machine.”\n→ Benjamin Graham",
+                "“It's not whether you're right or wrong that's important, but how much money you make when you're right and how much you lose when you're wrong.”\n→ Warren Buffett",
+                "“Rule No. 1: Never lose money. Rule No. 2: Never forget rule No. 1.”\n→ Warren Buffett",
+                "“It's far better to buy a wonderful company at a fair price than a fair company at a wonderful price.”\n→ Warren Buffett / Charlie Munger",
+                "“Risk comes from not knowing what you're doing.”\n→ Warren Buffett",
+                "“Be fearful when others are greedy and greedy when others are fearful.”\n→ Warren Buffett",
+                "“The stock market is a device for transferring money from the impatient to the patient.”\n→ Warren Buffett",
+                "“Price is what you pay. Value is what you get.”\n→ Warren Buffett",
+                "“Never invest in a business you cannot understand.”\n→ Warren Buffett",
+                "“If you aren't willing to own a stock for ten years, don't even think about owning it for ten minutes.”\n→ Warren Buffett",
+                "“The trend is your friend.”\n→ Jesse Livermore",
+                "“Cut your losses short and let your profits run.”\n→ Jesse Livermore",
+                "“Markets are never wrong – opinions often are.”\n→ Jesse Livermore",
+                "“Bull markets are born on pessimism, grown on skepticism, mature on optimism and die on euphoria.”\n→ John Templeton",
+                "“The four most dangerous words in investing are: 'This time it's different.'”\n→ John Templeton",
+                "“Waiting is also a position.”\n→ Wall Street Proverb",
+                "“Cash is also an investment.”\n→ Wall Street Proverb",
+                "“You can't buy at the very bottom or sell at the very top.”\n→ Wall Street Proverb",
+                "“Don't try to catch a falling knife.”\n→ Wall Street Proverb",
+                "“Buy the rumor, sell the news.”\n→ Wall Street Proverb",
+                "“When everyone is looking in the same direction, risk increases.”\n→ Wall Street Proverb",
+                "“The market will test your emotions.”\n→ Wall Street Proverb",
+                "“The more certain you are, the more cautious you should be.”\n→ Wall Street Proverb",
+                "“The more active the trader, the less money they make.”\n→ Brad Barber & Terence Odean",
+                "“Time in the market beats timing the market.”\n→ Investment Proverb",
+                "“Compound interest is the eighth wonder of the world.”\n→ Albert Einstein",
+                "“Time is the friend of the wonderful company, the enemy of the mediocre.”\n→ Warren Buffett",
+                "“Investing without looking at the numbers is like driving a car without a dashboard.”\n→ Peter Lynch",
+                "“Buy the business, not the story.”\n→ Peter Lynch",
+                "“The most dangerous time is when everyone feels safe.”\n→ Howard Marks",
+                "“Risk is not volatility; it is the permanent loss of capital.”\n→ Howard Marks",
+                "“Good investing is about surviving the bad scenarios.”\n→ Howard Marks",
+                "“High returns come from high discomfort.”\n→ Howard Marks",
+                "“Markets overreact in both directions.”\n→ Robert Shiller",
+                "“Diversification is protection against ignorance.”\n→ Warren Buffett",
+                "“The best time to buy is when everyone wants to sell.”\n→ Wall Street Proverb",
+                "“Buying cheap is half the profit.”\n→ Benjamin Graham",
+                "“Markets are always either too optimistic or too pessimistic.”\n→ Benjamin Graham",
+                "“Cutting losses is not a choice, it is survival.”\n→ Trader Proverb",
+                "“Manage risk, not returns.”\n→ Ray Dalio",
+                "“Don't predict the future, prepare for it.”\n→ Ray Dalio",
+                "“Successful investors rely on principles, not predictions.”\n→ Ray Dalio",
+                "“The market can be irrational, but it won't stay irrational forever.”\n→ John Maynard Keynes",
+                "“The market can remain irrational longer than you can remain solvent.”\n→ John Maynard Keynes",
+                "“Leverage makes mistakes fatal.”\n→ Wall Street Proverb",
+                "“Profits come from patience, losses come from haste.”\n→ Wall Street Proverb",
+                "“There is no such thing as perfect timing.”\n→ Investment Proverb",
+                "“Bear markets reveal bad companies.”\n→ Wall Street Proverb",
+                "“Wonderful companies become stronger through a crisis.”\n→ Warren Buffett",
+                "“In investing, the most important word is not 'forever', but 'long enough'.”\n→ Howard Marks"
+            ]
+        };
 
         function displayRandomProverb() {
             const proverbText = document.getElementById('proverb-text');
-            const randomIndex = Math.floor(Math.random() * proverbs.length);
-            proverbText.textContent = proverbs[randomIndex];
+            if (proverbText) {
+                const currentLang = i18n.getLanguage();
+                const list = proverbs[currentLang] || proverbs.en;
+                const randomIndex = Math.floor(Math.random() * list.length);
+                proverbText.textContent = list[randomIndex];
+            }
         }
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -455,6 +560,13 @@
                     link.href = canvas.toDataURL();
                     link.click();
                 });
+            });
+
+            // Listen for language changes to refresh dynamic content
+            window.addEventListener('languageChanged', () => {
+                fetchUSSentiment();
+                updateUSMarketStatus();
+                displayRandomProverb();
             });
         });
     </script>
