--- a/public/index.html
+++ b/public/index.html
@@ -1005,8 +1005,13 @@
 
             if (howCalculatedButton && indicatorExplanationSection) {
                 howCalculatedButton.addEventListener('click', () => {
-                    if (indicatorExplanationSection.style.display === 'none') {
+                    const isOpening = indicatorExplanationSection.style.display === 'none';
+                    if (isOpening) {
                         indicatorExplanationSection.style.display = 'block';
+                        // Small timeout to ensure DOM has rendered the block before scrolling
+                        setTimeout(() => {
+                            indicatorExplanationSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                        }, 10);
                     } else {
                         indicatorExplanationSection.style.display = 'none';
                     }
@@ -1065,11 +1070,11 @@
                             })
                             .catch(error => {
                                 console.error(`Error loading advisor advice for ${activeAdvisor}:`, error);
-                                advisorAdviceDisplay.innerHTML = `<p class="text-sm text-red-500">조언을 불러오는 데 실패했습니다: ${advisorAdvices[activeAdvisor] || '데이터 없음'}</p>`;
+                                advisorAdviceDisplay.innerHTML = `<p class="text-sm text-red-500">데이터를 불러오는 데 실패했습니다.</p>`;
                             });
                     } else {
-                        // Fallback for advisors without a dedicated file (like GPT, Grok initially)
-                        advisorAdviceDisplay.innerHTML = `<p class="text-sm dark:text-slate-200">${advisorAdvices[activeAdvisor]}</p>`;
+                        // Fallback for advisors without a dedicated file
+                        advisorAdviceDisplay.innerHTML = `<p class="text-sm dark:text-slate-200">조언을 준비 중입니다.</p>`;
                     }
                 }
             }
