--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
@@ -118,10 +119,13 @@
 <button id="theme-switcher" class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
 <span class="material-symbols-outlined dark:text-white">light_mode</span>
 </button>
-<button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
-<span class="material-symbols-outlined dark:text-white">notifications</span>
-</button>
-<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvECRXQfW82pZjHea9vnYNYvU8yp9ZTwnIf')"></div>
+<div id="auth-container" class="flex items-center gap-2">
+    <button id="login-button" class="hidden flex h-10 px-4 items-center justify-center rounded-lg bg-primary text-white font-bold hover:opacity-90 transition-opacity" data-i18n="login">Login</button>
+    <div id="user-profile" class="hidden flex items-center gap-3">
+        <div id="user-avatar" class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar"></div>
+        <button id="logout-button" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="logout">Logout</button>
+    </div>
+</div>
 </div>
 </div>
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
@@ -1147,6 +1151,56 @@
     });
 });
 
+    </script>
+    <script>
+        // Supabase configuration
+        const SUPABASE_URL = 'VITE_SUPABASE_URL';
+        const SUPABASE_ANON_KEY = 'VITE_SUPABASE_ANON_KEY';
+        const { createClient } = supabase;
+        const supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+        const loginButton = document.getElementById('login-button');
+        const logoutButton = document.getElementById('logout-button');
+        const userProfile = document.getElementById('user-profile');
+        const userAvatar = document.getElementById('user-avatar');
+
+        async function updateAuthState() {
+            const { data: { user } } = await supabaseClient.auth.getUser();
+            
+            if (user) {
+                loginButton.classList.add('hidden');
+                userProfile.classList.remove('hidden');
+                if (user.user_metadata.avatar_url) {
+                    userAvatar.style.backgroundImage = `url('${user.user_metadata.avatar_url}')`;
+                }
+            } else {
+                loginButton.classList.remove('hidden');
+                userProfile.classList.add('hidden');
+            }
+        }
+
+        loginButton.addEventListener('click', async () => {
+            const { error } = await supabaseClient.auth.signInWithOAuth({
+                provider: 'google',
+                options: {
+                    redirectTo: window.location.origin
+                }
+            });
+            if (error) console.error('Error logging in:', error.message);
+        });
+
+        logoutButton.addEventListener('click', async () => {
+            const { error } = await supabaseClient.auth.signOut();
+            if (error) console.error('Error logging out:', error.message);
+            updateAuthState();
+        });
+
+        // Initialize auth state
+        supabaseClient.auth.onAuthStateChange((event, session) => {
+            updateAuthState();
+        });
+
+        updateAuthState();
     </script>
 </body>
 </html>
